--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.7",
+    "@ngrx/effects": "^18.0.1",
+    "@ngrx/store": "^17.2.0",
+    "@ngrx/store-devtools": "^17.2.0",
+    "bootstrap": "^5.3.3",
     "express": "^4.18.2",
+    "primeng": "^17.18.6",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
